Complete first task

--- a/index.html
+++ b/index.html
@@ -180,6 +180,31 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+ 
+ var fireballSize = 22; 
+function getFireballSpeed(left){
+  if ( left === true){
+  return 5;
+}
+return 2;
+}
+
+ var wizardSpeed = 3;
+ var wizardWidth = 70;
+function getWizardHeight(){
+
+return 1.337 * wizardWidth 
+}
+function getWizardX(width){
+  return width /2
+}
+function getWizardY(height){
+  return height *(2/3)
+}
+
+  </script>
+
 
 <script src="js/game.js"></script>
 
