--- a/index.html
+++ b/index.html
@@ -180,30 +180,28 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+
 <script>
- 
- var fireballSize = 22; 
-function getFireballSpeed(left){
-  if ( left === true){
-  return 5;
+var fireballSize = 22;
+
+function getFireballSpeed(left) {
+  return left ? 5 : 2
 }
-return 2;
+var wizardSpeed = 3;
+var wizardWidth = 70;
+var getWizardHeight = function() {
+  return 1.337 * wizardWidth
 }
 
- var wizardSpeed = 3;
- var wizardWidth = 70;
-function getWizardHeight(){
-
-return 1.337 * wizardWidth 
-}
-function getWizardX(width){
-  return width /2
-}
-function getWizardY(height){
-  return height *(2/3)
+function getWizardX(width) {
+  return width / 2
 }
 
-  </script>
+function getWizardY(height) {
+  return (height * (2 / 3) - getWizardHeight())
+}
+
+</script>
 
 
 <script src="js/game.js"></script>
