--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
       </div>
     </div>
 
+
     <div class="setup-footer">
       <div class="setup-similar hidden">
 
@@ -181,6 +182,30 @@
   </div>
 </template>
 
+<script>
+var fireballSize = 22;
+
+function getFireballSpeed(left) {
+  return left ? 5 : 2
+}
+var wizardSpeed = 3;
+var wizardWidth = 70;
+var getWizardHeight = function() {
+  return 1.337 * wizardWidth
+}
+
+function getWizardX(width) {
+  return width / 2
+}
+
+function getWizardY(height) {
+  return (height * (2 / 3) - getWizardHeight())
+}
+
+</script>
+
+
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
