--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <div class="demo"></div>
 
         <div class="setup-open">
-            <img src="./img/user-1.jpg" class="setup-open-icon">
+            <img src="./img/user-1.jpg" class="setup-open-icon" tabindex = "0">
         </div>
     </header>
 
     <div class="overlay setup hidden">
-        <form class="setup-wizard-form" method="post" enctype="multipart/form-data" autocomplete="off">
+        <form class="setup-wizard-form" method="post" enctype="multipart/form-data" action=" https://js.dump.academy/code-and-magick " autocomplete="off">
 
             <div class="setup-title">
                 <div class="setup-user">
@@ -78,7 +78,7 @@
                     </div>
                     <label>
           <input type="text" name="username"
-                 maxlength="25" required
+                minlength="2" maxlength="25" required
                  class="setup-user-name" value="Синий Пендальф"/>
         </label>
                 </div>
@@ -104,7 +104,7 @@
                 <div class="setup-wizard-appearance">
                     <div class="setup-wizard-wrap">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-wizard">
-            <g class="wizard">
+            <g class="wizard" >
               <use xlink:href="#wizard-coat" class="wizard-coat" style="fill: #6589a4"></use>
               <use xlink:href="#wizard-head" class="wizard-head"></use>
               <use xlink:href="#wizard-eyes" class="wizard-eyes"></use>
